IT WORKS. GET that Coors Light!

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   <body>
     <h1 class="shake-slow shake-constant">EverTapped</h1>
     <div id="app">
+      <p>{{getBeerName()}}</p>
       <ol>
         <li>Beer: {{beerName}}</li>
-        <li>Brewery: {{brewery}}</li>
+        <li>Style: {{style}}</li>
         <li>ABV: {{abv}}</li>
       </ol>
-      <p>{{getBeerName()}}</p>
+
 
     </div>
     <!-- JS -->
